[gd_scene load_steps=5 format=3 uid="uid://bnvfuklj58uqa"]

[ext_resource type="Theme" uid="uid://s7hlwwefuhgh" path="res://addons/ridiculous_stream/ui/chat_message.theme" id="1_w2iiu"]
[ext_resource type="StyleBox" uid="uid://bc1bxky84vqw4" path="res://addons/ridiculous_stream/ui/editor_overlay_panel.stylebox" id="2_inlpn"]
[ext_resource type="Script" path="res://addons/ridiculous_stream/instances/pnl_connect_to_gift.gd" id="3_xkxpm"]
[ext_resource type="Texture2D" uid="uid://boa5ns6c4c07k" path="res://addons/ridiculous_stream/ui/bootstrap_icons/twitch.svg" id="4_vbqxq"]

[node name="pnl_connect_to_gift" type="PanelContainer"]
offset_right = 371.0
offset_bottom = 285.0
theme = ExtResource("1_w2iiu")
theme_override_styles/panel = ExtResource("2_inlpn")
script = ExtResource("3_xkxpm")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="empty3" type="Control" parent="vb"]
layout_mode = 2
size_flags_vertical = 3

[node name="twitch_ico" type="TextureRect" parent="vb"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture = ExtResource("4_vbqxq")
expand_mode = 1
stretch_mode = 5

[node name="empty" type="Control" parent="vb"]
layout_mode = 2
size_flags_vertical = 3

[node name="grid" type="GridContainer" parent="vb"]
layout_mode = 2
columns = 2

[node name="lb1" type="Label" parent="vb/grid"]
layout_mode = 2
text = "Channel"

[node name="ln_channel_name" type="LineEdit" parent="vb/grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "your Twitch channel name"
alignment = 1

[node name="lb2" type="Label" parent="vb/grid"]
layout_mode = 2
text = "Bot Name"

[node name="ln_bot_name" type="LineEdit" parent="vb/grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "bot name"
alignment = 1
editable = false

[node name="btn_connect" type="Button" parent="vb"]
layout_mode = 2
text = "connect"

[node name="btn_connect_at_startup" type="CheckBox" parent="vb"]
layout_mode = 2
text = "connect at startup"

[node name="empty2" type="Control" parent="vb"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="text_changed" from="vb/grid/ln_channel_name" to="." method="_on_ln_channel_name_text_changed"]
[connection signal="text_submitted" from="vb/grid/ln_channel_name" to="." method="_on_ln_channel_name_text_submitted"]
[connection signal="pressed" from="vb/btn_connect" to="." method="_on_btn_connect_pressed"]
